@@ -820,6 +820,11 @@
     <name>Dafydd Harries</name>
     <email>daf@muse.19inch.net</email>
   </person>
+  <!-- wo translation coordinator -->
+  <person id="x-mmmbacke">
+    <name>Mouhamadou Mamoune Mbacke</name>
+    <email>mouhamadoumamoune@gmail.com</email>
+  </person>
   <!-- xh translation coordinator -->
   <person id="aattar">
     <name>Adi Attar</name>
