@@ -628,6 +628,11 @@
     <coordinator id="daf"/>
     <webpage>http://muse.19inch.net/~daf/gnome-cy/</webpage>
   </team>
+  <team id="wo">
+    <_language id="wo">Wolof</_language>
+    <coordinator id="x-mmmbacke"/>
+    <webpage>http://waxwolof.org/</webpage>
+  </team>
   <team id="xh">
     <_language id="xh">Xhosa</_language>
     <coordinator id="aattar"/>
