@@ -1,5 +1,10 @@
 2007-06-07  Claude Paroz  <claude@2xlibre.net>
 
+	* people.xml.in:
+	* translation-teams.xml.in: Add Wolof Team.
+
+2007-06-07  Claude Paroz  <claude@2xlibre.net>
+
 	* gnome-modules.xml.in:
 	* releases.xml.in: deskbar-applet branched for 2.18.
 
